@@ -1,3 +1,12 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    border: 0;
+    overflow: hidden; /*  Disable scrollbars */
+    display: block;  /* No floating content on sides */
+}
+
 .jsPanel-hdr-r {
     display: none;
 }
