@@ -3,6 +3,11 @@
 <html lang="us">
   <head>
     <meta charset="utf-8" />
+
+    <!-- Disable pinch zoom on mobile devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="HandheldFriendly" content="true" />
+    
     <title>Orthanc Web Viewer</title>
     <link href="../libs/jquery-ui.min.css" rel="stylesheet" />
     <link href="../libs/jquery-ui.theme.min.css" rel="stylesheet" />
