@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Disable pinch zoom on mobile devices
 * Fix download of DICOM instance from the toolbox
 * Fix for Osimis issue WVB-319: Some images are not loading in US_MF
 * Support of rendering RGB48 lookup tables (palette), if Orthanc SDK >= 1.3.1
